# rag-insurance

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  PROJECT_STATE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: eval.yml
NOTES/: INDEX.md  phase0.md  phase1.md  phase1_failures.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md  phase7.md
dags/: ingest_dag.py
demo/: DEMO_SCRIPT.md  app.py
eval/: RESULTS.md  golden_set.json
eval/results/: 20260705_122729_v1-naive-dirty-corpus.json  20260705_124248_v2-clean-corpus.json  20260705_124434_v2-clean-corpus-labelfix.json  20260705_172447_verify-by-hand.json  20260705_173715_v3-chunk-align-256.json  20260705_173828_v3-chunk-align-bge.json  20260705_174126_v3-structure-chunks.json  20260705_174222_v3-structure-chunks-packed.json  20260705_174433_v3-hybrid-rrf.json  20260705_174559_v3-rerank.json  20260705_174742_v3-hnsw.json  20260705_180249_v3-final.json  20260705_224040_full-verify.json  20260706_135259_v4-query-rewrite.json  20260706_135457_v4-rewrite-rerank.json  20260706_135708_v4-state-filter.json  20260706_141528_v4-citations.json  20260706_143111_v4-final.json  20260707_164830_v4-verify-1.json  20260707_164918_v4-verify-2.json  20260708_144404_v5-final.json  20260710_130255_v6-agent-retrieval.json  20260710_130654_v6-pipeline-multihop.json  20260710_130745_v6-agent-multihop.json  (+2 more)
scripts/: download_data.py
src/rag_insurance/: __init__.py  (+2 more)
tests/: test_agent_router.py  test_api.py  test_chunker.py  test_citation_verify.py  test_metrics.py  test_store_roundtrip.py
(+20 files in other folders)
