[project]
name = "rag-insurance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "VasanthPrabahar", email = "vprabah1@asu.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
]

[project.scripts]
rag-insurance = "rag_insurance:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
